--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     --bright-blue: hsl(192, 70%, 51%);
     --gray: hsl(231, 6%, 51%);
     --light-gray:hsl(220, 16%, 96%);
+    --white:hsl(180, 100%, 100%);
+
 }
 
 a {
@@ -148,6 +150,41 @@ img {
 #info p {
     font-size: 1.2vw;
     color: var(--gray);
+}
+
+aside {
+    width: 100%;
+    height: 80vh;
+    background-color: var(--light-gray);
+}
+
+#article-box {
+    font-size: 30px;
+    font-weight: 400;
+    color: var(--dark-blue);
+    margin-bottom: 3vw;
+    margin-left: 7vw;
+}
+
+#articles {
+    display: flex;
+    flex-direction: row;
+    gap: 5vw;
+    width: 80%;
+    margin: auto;
+    color: var(--gray);
+}
+
+.picture {
+    width: 15vw;
+}
+
+#articles h4 {
+    font-weight: 600;
+}
+
+#articles p {
+    font-size: 14px;
 }
 
 
