--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button {
     border: none;
     padding: 1vw;
     color: var(--light-gray);
+    cursor: pointer;
 }
 
 body {
@@ -45,6 +46,7 @@ body {
     margin-left: 5vw;
     margin-top: 2vw;
     color: var(--dark-blue);
+    cursor: pointer;
 }
 
 ul {
@@ -54,7 +56,7 @@ ul {
 
 #menu {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;   
 }
 
 #menu li {
@@ -62,6 +64,7 @@ ul {
     margin-top: 2.5vw;
     margin-left: 2vw;
     margin-right: 4vw;
+    cursor: pointer;
 }
 
 #nav-btn {
@@ -87,6 +90,7 @@ main {
     width: 50%;
     margin-left: 7vw;
     margin-top: 7vw;
+    cursor: pointer;
 }
 
 #text h2 {
@@ -134,6 +138,7 @@ img {
     display: flex;
     flex-direction: row;
     gap: 5vw;
+    cursor: pointer;
 }
 
 .icon {
@@ -181,10 +186,63 @@ aside {
 
 #articles h4 {
     font-weight: 600;
+    cursor: pointer;
 }
 
 #articles p {
     font-size: 14px;
+    cursor: pointer;
+}
+
+footer {
+    width: 100%;
+    height: 35vh;
+    background-color: var(--dark-blue);
+    display: flex;
+    flex-direction: row;
+    gap: 18vw;
+}
+
+#first-block {
+    margin-left: 5vw;
+    margin-top: 5vw;
+}
+
+#logo-footer {
+    font-size: 2vw;
+    font-weight: 600;
+    color: var(--white);
+    cursor: pointer;
+}
+
+#social-media {
+    width: 1.2vw;
+    display: flex;
+    flex-direction: row;
+    gap: 1vw;
+    margin-top: 3vw;
+    cursor: pointer;
+}
+
+#second-block {
+    margin-top: 5vw;
+    color: var(--white);
+    font-size: 14px;
+    line-height: 2vw;
+    cursor: pointer;
+}
+
+#third-block {
+    margin-top: 5vw;
+    color: var(--white);
+    font-size: 14px;
+    line-height: 2vw;
+    cursor: pointer;
+}
+
+#fourth-block {
+    margin-top: 5vw;
+    cursor: pointer;
 }
 
 
